# Nutriscan_Project

./: .gitignore  GIT_SETUP.md  README.md  app.py  pyproject.toml
utils/: __init__.py  charts.py  chatbot.py  data.py
